--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body{
     width: 40vw;
     height: 300px;
 
-    background-color: rgb(153, 22, 240);
+    background-color: #323140;
     border-radius: 30px;
     padding: 15px 20px;
     box-sizing: border-box;
